--- a/app/less/styles.less
+++ b/app/less/styles.less
@@ -62,8 +62,8 @@
 /*
  * JQuery UI
  */
-@import "../bower_components/jquery-ui/themes/base/jquery-ui.css";
-@import "../bower_components/jquery-ui/themes/base/theme.css";
+@import (less) "../bower_components/jquery-ui/themes/base/jquery-ui.css";
+@import (less) "../bower_components/jquery-ui/themes/base/theme.css";
 
 
 
