--- a/app/less/styles.less
+++ b/app/less/styles.less
@@ -63,7 +63,8 @@
  * JQuery UI
  */
 @import (less) "../bower_components/jquery-ui/themes/base/jquery-ui.css";
-@import (less) "../bower_components/jquery-ui/themes/base/theme.css";
+//@import (less) "../bower_components/jquery-ui/themes/base/theme.css";
+@import (less) "../bower_components/jquery-ui-bootstrap/jquery.ui.theme.css";
 
 
 /*
