ajout slider touchable

--- a/app/less/styles.less
+++ b/app/less/styles.less
@@ -66,6 +66,10 @@
 //@import (less) "../bower_components/jquery-ui/themes/base/theme.css";
 @import (less) "../bower_components/jquery-ui-bootstrap/jquery.ui.theme.css";
 
+/*
+ * Rangeslider.js
+ */
+@import (less) "../bower_components/rangeslider.js/dist/rangeslider.css";
 
 /*
  * App theme
